--- a/views/show.ejs
+++ b/views/show.ejs
@@ -5,10 +5,14 @@
     <title></title>
 </head>
 <body>
-    <h1>marsMissions#show page</h1>
+    <h1>Missions show page</h1>
     
     <p>
-        <%= marsMissions.name %>
+        <%= marsMissions.name %> <br>
+        <%= marsMissions.launchDate %><br>
+        <%= marsMissions.operator %><br>
+        <%= marsMissions.missionType %>
+        
     </p>
 </body>
 </html>
